causeway-dosx (3.66tk-build20221225-2~@distro@) @distro@; urgency=medium

  * Also install uncompressed CauseWay DOS extender stub.

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 25 Dec 2022 16:52:36 +0000

causeway-dosx (3.66tk-build20221225-1~@distro@) @distro@; urgency=medium

  * Bail out early if executable cannot read self (thanks Stas Sergeev for
    the issue report).

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 25 Dec 2022 08:50:22 +0000

causeway-dosx (3.65tk-build20221224-3~@distro@) @distro@; urgency=medium

  * Check for null environment segment (thanks Stas Sergeev).
  * Try to build CauseWay debugger.

 -- TK Chia <tkchia@users.noreply.github.com>  Sat, 24 Dec 2022 21:49:58 +0000

causeway-dosx (3.64tk-build20220630-1~@distro@) @distro@; urgency=medium

  * Check that int 0x21 file paths do not overflow transfer buffer.

 -- TK Chia <tkchia@users.noreply.github.com>  Thu, 30 Jun 2022 14:52:46 +0000

causeway-dosx (3.63tk-build20220629-2~@distro@) @distro@; urgency=medium

  * Try to build Michael Devore's CauseWay Compressor.
  * Fix: race condition from concurrent `git submodule update --init`.

 -- TK Chia <tkchia@users.noreply.github.com>  Wed, 29 Jun 2022 20:07:31 +0000

causeway-dosx (3.63tk-build20220331-3~@distro@) @distro@; urgency=medium

  * Tweak MS-DOS 1.x hack in decompressor stub, to work even when stub's
    .exe header has been rewritten by the Watcom Linker.
  * Build CauseWay Linker with the help of dosbox or dosemu2.

 -- TK Chia <tkchia@users.noreply.github.com>  Fri, 31 Mar 2022 18:39:58 +0000

causeway-dosx (3.62tk-build20220325-1~@distro@) @distro@; urgency=medium

  * Internal tweaks for CauseWay version number handling.
  * Try to make int 0x21, ah = 0x4a, properly return maximum possible block
    reallocation size.  FIXME.

 -- TK Chia <tkchia@users.noreply.github.com>  Fri, 25 Mar 2022 17:57:46 +0000

causeway-dosx (3.61tk-build20220323-1~@distro@) @distro@; urgency=medium
